# compiler-xo

./: .clang-format  .fmt.lum  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  build_lumina.sh  libc.asm  out.asm  test.lum  test.xo  tmp  tmp.asm
docs/: asm.org  grammar.md  grammer.tex  lang-tour.md  syntax.md
examples/: lumisms.lum  lumisms.md
examples/demo/: demo.lum
pkg/lumfmt/: lumfmt.py
pkg/lumina_vsc/: .gitignore  .vscodeignore  README.md  language-configuration.json  package.json
pkg/lumina_vsc/syntax/: lumina.tmLanguage.json
scripts/: build.sh  format.py  run-dev.sh  run.sh
src/: arena.c  arena.h  array.h.bak  err.h  generator.h  hashtable.h  hashtable.h.bak  lexer.h  lumlib.h  main.c  parser.h  print.c  print.h  tokenizer.h  xolib.h
src/lib/: prelude-test.h  test-tokenizer.c  test_parser.c  test_tokenizer.c
src/test/: include_test.h  test_parser.c  tmp.asm
src/test/output/: test-tokenizer  test_tokenizer
test/: libc.asm  tmp.c
test/output/: test-parser  test_parser
